# src/controller/KataController.ts
@@ -3,7 +3,8 @@ import { IKataController } from './interfaces'
 import { LogSuccess, LogWarning } from '../utils/logger'
 
 // ORM - Katas Collection
-import { getAllKatas, getAllKatasByRate, getKataByDifficulty, getLast5Katas, getAllKatasByChance, newValoration } from '../domain/orm/Kata.orm'
+import { getAllKatas, getKataByID, deleteKataByID, createKata, updateKataById, getAllKatasByRate, getKataByDifficulty, getLast5Katas, getAllKatasByChance, newKataValoration } from '../domain/orm/Kata.orm'
+import { IKata } from 'src/domain/interfaces/IKata.interface'
 
 @Route('/api/katas')
 @Tags('KataController')
@@ -11,11 +12,13 @@ export class KataController implements IKataController {
   /**
    * Endpoint to retreive the Katas in the Collection "Katas" of DB
    */
-  @Get('/')
-  public async getKatas (page: number, limit: number, level?: number, last?: string, rated?: string, chance?: string): Promise<any> {
+  public async getKatas (page: number, limit: number, id?: string, level?: string, last?: string, rated?: string, chance?: string): Promise<any> {
     let response: any = ''
 
-    if (level) {
+    if (id) {
+      LogSuccess(`[/api/katas] Get Kata By ID: ${id}`)
+      response = await getKataByID(id)
+    } else if (level) {
       LogSuccess(`[/api/katas] Get Katas By Difficulty Level ${level}`)
       response = await getKataByDifficulty(page, limit, level)
     } else if (last) {
@@ -36,15 +39,62 @@ export class KataController implements IKataController {
   }
 
   /**
+   * Endpoint to delete a Kata in the Collection "Katas" of DB
+   */
+  public async createKata (kata: IKata): Promise<any> {
+    let response: any = ''
+
+    if (kata) {
+      await createKata(kata).then((r) => {
+        LogSuccess(`[/api/katas] Create Kata: ${kata.name}`)
+        response = {
+          message: `Kata created successfully: ${kata.name}`
+        }
+      })
+    } else {
+      LogWarning('[/api/katas] Register needs Kata Entity')
+      response = {
+        message: 'Kata not Registered: Please, provide a Kata to create one'
+      }
+    }
+    return response
+  }
+
+  /**
+   * Endpoint to delete a Kata in the Collection "Katas" of DB
+   * @param {string} id Id of kata to delete (optional)
+   * @returns Message information if deletion was correct
+   */
+  @Delete('/')
+  public async deleteKataById (@Query()id?: string): Promise<any> {
+    let response: any = ''
+
+    if (id) {
+      LogSuccess(`[/api/katas] Delete Kata By ID: ${id}`)
+      await deleteKataByID(id).then((r) => {
+        response = {
+          message: `Kata with id ${id} deleted successfully`
+        }
+      })
+    } else {
+      LogWarning('[/api/katas] Delete Kata Without ID')
+      response = {
+        message: 'Please, provide an ID to remove from database'
+      }
+    }
+
+    return response
+  }
+
+  /**
    * Endpoint to update the Katas in the Collection "Katas" of DB
    */
-  @Put('/')
   public async updateKata (@Query()id: string, update: any): Promise<any> {
     let response: any = ''
 
     if (id) {
       LogSuccess(`[/api/katas] Update Kata By ID: ${id}`)
-      await newValoration(id, update).then((r) => {
+      await newKataValoration(id, update).then((r) => {
         response = {
           message: `Kata with id ${id} have a new valoration`
         }
