# src/controller/UsersController.ts
@@ -1,11 +1,11 @@
 // Controller: Ejecuta las ordenes del ORM
 
-import { Get, Query, Route, Tags, Delete, Post, Put } from 'tsoa'
+import { Get, Query, Route, Tags, Delete, Put } from 'tsoa'
 import { IUserController } from './interfaces'
-import { LogSuccess, LogWarning } from '../utils/logger'
+import { LogError, LogSuccess, LogWarning } from '../utils/logger'
 
 // ORM - Users Collection
-import { getAllUsers, getUserByID, deleteUserByID, createUser, updateUserById } from '../domain/orm/User.orm'
+import { getAllUsers, getUserByID, deleteUserByID, updateUserById, getKatasFromUser } from '../domain/orm/User.orm'
 
 @Route('/api/users')
 @Tags('UserController')
@@ -61,7 +61,6 @@ export class UserController implements IUserController {
    * @param {string} id User to update
    * @returns Message information if update was correct
    */
-  @Put('/')
   public async updateUser (@Query()id: string, user: any): Promise<any> {
     let response: any = ''
 
@@ -76,6 +75,23 @@ export class UserController implements IUserController {
       LogWarning('[/api/users] Update User Without ID')
       response = {
         message: 'Please, provide an ID to update an existing user'
+      }
+    }
+
+    return response
+  }
+
+  @Get('/katas')
+  public async getKatas (@Query()page: number, @Query()limit: number, @Query()id: string): Promise<any> {
+    let response: any = ''
+
+    if (id) {
+      LogSuccess(`[/api/users/katas] Get Katas from User: ${id}`)
+      response = await getKatasFromUser(page, limit, id)
+    } else {
+      LogError('[/api/users/katas] Get All Katas from User')
+      response = {
+        message: 'ID from user is needed'
       }
     }
 
